--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -47,10 +47,9 @@
          </tab>
 
          <tab heading="Интересы">
-            <h4>Введение</h4>
-            <p>{{member.introduction}}</p>
-            <h4>В поисках</h4>
-            <p>{{member.lookingFor}}</p>
+            <h4>Интересы</h4>
+            <p>{{member.interests}}</p>
+
          </tab>
 
          <tab heading="Фотографии" #photoTab="tab">
