--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -75,7 +75,7 @@
          </tab>
 
          <tab heading="Моя галерея">
-            <h4>Скоро</h4>
+            <app-photo-editor [member]="member"></app-photo-editor>
          </tab>
       </tabset>
    </div>
