End with validation data

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,39 +1,38 @@
-<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
    <h2 class="text-center text-primary">Регистрация</h2>
    <hr>
-   <div class="mb-3">
-      <input type="text" class="form-control"
-         [class.is-invalid]="registerForm.get('username')?.errors && registerForm.get('username')?.touched"
-         formControlName="username" placeholder="Имя пользователя">
-      <div class="invalid-feedback">Введите имя пользователя</div>
-   </div>
 
    <div class="mb-3">
-      <input type="password"
-         [class.is-invalid]="registerForm.get('password')?.errors && registerForm.get('password')?.touched"
-         class="form-control" formControlName="password" placeholder="Пароль">
-         <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('required')">Введите пароль</div>
-         <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('minlength')">Пароль должен быть не менее 6 символов</div>
-         <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('maxlength')">Пароль не должен быть более 12 символов</div>
+      <label style="margin-right:10px;">Пол:</label>
+      <label class="form-check-label">
+         <input type="radio" class="form-check-input" value="male" formControlName="gender"> Мужской
+      </label>
+
+      <label class="form-check-label">
+         <input type="radio" class="form-check-input ms-3" value="female" formControlName="gender"> Женский
+      </label>
+
    </div>
 
+   <app-text-input [formControl]="$any(registerForm.controls['username'])" [label]="'Имя пользователя'"></app-text-input>
+   <app-text-input [formControl]="$any(registerForm.controls['knownAs'])" [label]="'Никнейм'"></app-text-input>
+   <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" [label]="'Дата рождения'" [maxDate]="maxDate"></app-date-picker>
+   <app-text-input [formControl]="$any(registerForm.controls['city'])" [label]="'Город'"></app-text-input>
+   <app-text-input [formControl]="$any(registerForm.controls['country'])" [label]="'Страна'"></app-text-input>
+   <app-text-input [formControl]="$any(registerForm.controls['password'])" [label]="'Пароль'" [type]="'password'"></app-text-input>
+   <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" [label]="'Подтвердите пароль'" [type]="'password'"></app-text-input>
 
-   <div class="mb-3">
-      <input type="password"
-         [class.is-invalid]="registerForm.get('confirmPassword')?.errors && registerForm.get('confirmPassword')?.touched"
-         class="form-control" formControlName="confirmPassword" placeholder="Повторите пароль">
-
-         <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('required')">Подтвердите ваш пароль</div>
-         <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('notMatching')">Пароли не совпадают</div>
+   <div class="row" *ngIf="validationErrors">
+      <ul class="text-danger">
+         <li *ngFor="let error of validationErrors">
+            {{error}}
+         </li>
+      </ul>
    </div>
-
 
    <div class="text-center">
-      <button class="btn btn-success me-2" type="submit">Зарегистрироваться</button>
+      <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Зарегистрироваться</button>
       <button class="btn btn-default" type="button" (click)="cancel()">Отмена</button>
 
    </div>
 </form>
-
-<p>Значение: {{registerForm.value | json}}</p>
-<p>Статус: {{registerForm.status | json}}</p>
