--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -17,12 +17,12 @@
 
          <div>
             <strong>Был(а) в сети:</strong>
-            <p>{{member.lastActive}}</p>
+            <p>{{member.lastActive + 'Z'| timeago}}</p>
          </div>
 
          <div>
             <strong>С нами:</strong>
-            <p>{{member.created}}</p>
+            <p>{{member.created | date: 'dd MMM YYYY'}}</p>
          </div>
       </div>
 
