--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -24,12 +24,12 @@
 
          <div>
             <strong>Был(а) в сети:</strong>
-            <p>{{member.lastActive}}</p>
+            <p>{{member.lastActive + 'Z'| timeago}}</p>
          </div>
 
          <div>
             <strong>С нами:</strong>
-            <p>{{member.created}}</p>
+            <p>{{member.created | date: 'dd MMM yyyy'}}</p>
          </div>
       </div>
          <div class="card-footer">
