--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -21,7 +21,7 @@
 
          <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
             <img src="{{user.photoUrl || './assets/user.png'}}" alt="user photo">
-            <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>{{user.username | titlecase}}</a>
+            <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>{{user.knownAs}}</a>
             <div class="dropdown-menu" *dropdownMenu>
                <a class="dropdown-item" routerLink="/member/edit">Редактировать</a>
                <a class="dropdown-item" (click)="logout()">Выйти</a>
