--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -1,1 +1,62 @@
-<p>messages works!</p>
+<div class="mb-4 d-flex">
+   <div class="btn-group" name="container">
+      <button class="btn btn-primary" btnRadio="Unread" [(ngModel)]="container" (click)="loadMessages()"><i class="fa fa-envelope"></i>Непрочитанное</button>
+      <button class="btn btn-primary" btnRadio="Inbox" [(ngModel)]="container" (click)="loadMessages()"><i class="fa fa-envelope-open"></i>Входящие</button>
+      <button class="btn btn-primary" btnRadio="Outbox" [(ngModel)]="container" (click)="loadMessages()"><i class="fa fa-paper-plane"></i>Исходящие</button>
+   </div>
+</div>
+
+<div class="row" *ngIf="!messages || messages.length === 0">
+   <h3>Сообщений нет</h3>
+</div>
+
+<div class="row" *ngIf="messages && messages.length > 0">
+   <table class="table table-hover" style="cursor: pointer;">
+      <thead>
+         <tr>
+            <th style="width: 40%;">Сообщение:</th>
+            <th style="width: 20%;">От вас / Вам:</th>
+            <th style="width: 20%;">Отправил / Получил:</th>
+            <th style="width: 20%;"></th>
+
+         </tr>
+      </thead>
+      <tbody class="align-middle">
+         <tr [hidden]="loading" *ngFor="let message of messages" routerLink="{{container === 'Outbox' ? '/members/' + message.recipientUsername : '/members/' + message.senderUsername}}" [queryParams]="{tab: 'Сообщения'}">
+            <td>{{message.content}}</td>
+            <td>
+               <div *ngIf="container === 'Outbox'">
+                  <img 
+                  class="img-circle rounded-circle me-2" 
+                  src="{{message.recipientPhotoUrl || './assets/user.png'}}" 
+                  alt="recipient photo">
+                  <strong>{{message.recipientUsername | titlecase}}</strong>
+               </div>
+               <div *ngIf="container !== 'Outbox'">
+                  <img class="img-circle rounded-circle me-2" src="{{message.senderPhotoUrl || './assets/user.png'}}" alt="recipient photo">
+                  <strong>{{message.senderUsername}}</strong>
+               </div>
+            </td>
+            <td>{{message.messageSent | timeago}}</td>
+            <td>
+               <button (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)" class="btn btn-danger">Удалить</button>
+            </td>
+         </tr>
+      </tbody>
+   </table>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="!loading && pagination && messages && messages.length > 0">
+   <pagination 
+      [boundaryLinks]="true" 
+      [totalItems]="pagination.totalItems"
+      [itemsPerPage]="pagination.itemsPerPage"
+      [maxSize]="12"
+      [(ngModel)]="pagination.currentPage"
+      (pageChanged)="pagedChanged($event)"
+      previousText="&lsaquo;" 
+      nextText="&rsaquo;" 
+      firstText="&laquo;" 
+      lastText="&raquo;">
+</pagination>
+</div>
