--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -12,7 +12,9 @@
 
    <div class="card-body p-1">
       <h6 class="card-title text-center mb-1">
-         <i class="fa fa-user me-2"></i>{{member.knownAs}} , {{member.age}}
+         <span [class.is-online]="(presenceService.onlineUsers$ | async)?.includes(member.userName)">
+            <i class="fa fa-user me-2"></i>{{member.knownAs}} , {{member.age}}
+         </span>
       </h6>
       <p class="card-text text-muted text-center">{{member.city}}</p>
    </div>
