--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -24,7 +24,7 @@
 
          <div>
             <strong>Был(а) в сети:</strong>
-            <p>{{member.lastActive + 'Z'| timeago}}</p>
+            <p>{{member.lastActive | timeago}}</p>
          </div>
 
          <div>
