--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-   <div *ngIf="!registerMode" style="text-align: center;">
+   <div *ngIf="!registerMode" style="text-align: center; margin-top: 400px;">
       <h1>Найди свою мечту</h1>
       <p class="lead">Приходите сюда чтобы посмотреть на мечты...всё что вам нужно - зарегистрироваться</p>
       <div class="text-center">
