--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="container">
-   <div class="d-flex">
+   <div class="d-flex justify-content-center">
       <div class="btn-group" name="predicate">
          <button class="btn btn-primary" btnRadio="liked" [(ngModel)]="predicate" (click)="loadLikes()">Вам
             понравились</button>
